# mini-erp

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Overview Product README.md  README.md  conftest.py  docker-compose.test.yml  docker-compose.yml  entrypoint-k8s.sh  entrypoint.sh  local_deploy.sh  main.py  mypy.ini  project-structure.md  pyproject.toml  pytest.ini  run-mypy  wait_for_db.py
.github/workflows/: ci.yml  quality_check.yml
apps/finance/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/finance/migrations/: 0001_initial.py  0002_add_expense_models.py
apps/finance/services/: accounts_payable_service.py  expense_service.py  report_service.py  stock_report_service.py
apps/inventory/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/inventory/constants/: categories.py
apps/inventory/migrations/: 0001_initial.py  0002_add_sku_sequence_and_triggers.py  0002_rename_is_master_warehouse_warehouse_is_marketplace_visible_and_more.py  0003_remove_productvariant_discounted_price_and_more.py  0003_stockmovement_field_change.py  0004_product_shipping_config_alter_category_id_and_more.py  0004_productcogs_reference_number_and_more.py  0005_add_allocated_fees_to_product_cogs.py  0006_category_master_category_key_productphoto.py  0007_add_shopee_ids_to_variant_marketplace.py  0008_category_shopee_category_id.py
apps/inventory/services/: bulk_inventory_service.py  inventory_service.py  product_service.py
apps/purchasing/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/purchasing/migrations/: 0001_initial.py  0002_add_po_number_sequence_and_triggers.py  0003_invoice.py  0004_delete_invoice_purchaseorderdetail_updated_qty.py  0005_rename_comission_fee_pct_purchaseorder_commission_fee_pct_and_more.py  0006_rename_total_qty_to_total_ordered_qty.py  0007_alter_purchaseorder_status.py
apps/purchasing/services/: purchasing_service.py
apps/sales/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/sales/migrations/: 0001_initial.py  0002_add_so_return_number_sequences.py  0003_salesorder_source_platform.py
apps/sales/services/: cogs_consumption.py  sales_service.py
apps/shopee/: admin.py  apps.py  client.py  factories.py  models.py  order_sync.py  serializers.py  stock_sync.py  tests.py  urls.py  utils.py  views.py  webhook_handler.py
apps/shopee/management/commands/: shopee_sync_orders.py  shopee_sync_stock.py
apps/shopee/migrations/: 0001_initial.py
core/: admin.py  factories.py  models.py  permissions.py  runners.py  serializers.py  settings.py  test_settings.py  unit_test.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_add_user_profile.py  0002_marketplace_shipping_config_alter_company_id_and_more.py
inventory/: views.py
k8s/: django-app.yaml  postgres.yaml
