[project]
name = "mini-erp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.47",
    "dj-database-url>=3.1.0",
    "django>=5.2.7",
    "django-environ>=0.12.0",
    "django-storages>=1.14.6",
    "django-stubs>=5.2.7",
    "django-ulid>=0.0.4",
    "django-cors-headers>=4.3.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.3.1",
    "factory-boy>=3.3.3",
    "gunicorn>=23.0.0",
    "mypy>=1.18.2",
    "pillow>=12.1.1",
    "pre-commit>=4.3.0",
    "psycopg[binary]>=3.2.12",
    "pymupdf>=1.27.1",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.3",
    "sqlparse>=0.5.3",
    "uvicorn>=0.38.0",
    "requests>=2.33.1",
]

[tool.ruff]
lint.select = ["F", "I"]  # Enable all imported rules
line-length = 100
target-version = "py312"
exclude = ["migrations", "__pycache__", "pyproject.toml"]

# Sort
[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

# Formater
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.uv]
link-mode = "copy"
